--- a/client/package.json
+++ b/client/package.json
@@ -12,15 +12,16 @@
         "@testing-library/react": "^13.1.1",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^0.27.2",
-        "bootstrap": "^5.1.0",
+        "bootstrap": "^5.2.3",
         "firebase": "^9.6.11",
         "nanoid": "^4.0.0",
         "prop-types": "^15.8.1",
         "react": "^18.1.0",
+        "react-bootstrap": "^2.7.4",
         "react-dom": "^18.1.0",
         "react-redux": "^7.2.6",
         "react-router-dom": "^5.3.1",
-        "react-scripts": "^5.0.1",
+        "react-scripts": "^2.1.3",
         "react-select": "^5.3.2",
         "react-toastify": "^9.0.5",
         "redux": "^4.2.0",
