--- a/client/src/config.json
+++ b/client/src/config.json
@@ -1,4 +1,4 @@
 {
-    "apiEndPoint": "https://finny-2421e-default-rtdb.europe-west1.firebasedatabase.app/",
+    "apiEndPoint": "",
     "isFireBase": true
 }
