--- a/server/data/project.json
+++ b/server/data/project.json
@@ -1,20 +1,18 @@
 [
-    {
-        "name": "Social network",
-        "projectID": "awdlnawdkjh12313",
-        "team": ["qweadwadqwe"],
-        "history": []
-    },
-    {
-        "name": "Pizza app",
-        "projectID": "awdlnawdkqweqwejh12313",
-        "team": ["qweadwadqwe"],
-        "history": []
-    },
-    {
-        "name": "bybalubba app",
-        "projectID": "awdlnaawdawdwdkjh12313",
-        "team": ["qweadwadqwe"],
-        "history": []
-    }
+  {
+    "name": "Social network",
+    "projectID": "awdlnawdkjh12313",
+    "team": [
+      "qweadwadqwe"
+    ],
+    "history": []
+  },
+  {
+    "name": "Pizza app",
+    "projectID": "awdlnawdkqweqwejh12313",
+    "team": [
+      "qweadwadqwe"
+    ],
+    "history": []
+  }
 ]
